[package]
name = "xlsx-to-usv"
version = "1.0.0"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "XLSX to USV: Convert Microsoft Excel (XLSX) to Unicode Separated Values (USV) for data markup, including for spreadsheets, databases, text files, and more."
readme = "README.md"
repository = "https://github.com/sixarm/xlsx-to-usv-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["xlsx", "usv", "data", "import", "export"]
categories = ["command-line-utilities", "encoding", "data-structures", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# calamine: An Excel/OpenDocument Spreadsheets file reader/deserializer, in pure Rust.
calamine = "0.24"

# usv: Unicode Separated Values
usv = "0.13.4"

# clap: Command Line Argument Parser
clap = { version = "4.5.2", features = ["cargo"] }

# log: A Rust library providing a lightweight logging facade
log = "0.4.21"

# env_logger: A logger that can be configured via environment variables
env_logger = "0.11.3"

[dev-dependencies]
criterion = ">= 0.5"
rand = ">= 0.8"
once_cell = "1.19.0"

[[bench]]
name = "example"
harness = false
